# state-of-polarization

./: .gitignore  ALGORITHM.md  FINAL_REPORT.md  README.md  README_HAL.md
c/: size_check
c/include/: baseline.h  fixedpoint.h  polctrl.h  polctrl_internal.h  rng.h  spsa.h
c/src/: bandit.c  fixedpoint.c  polctrl.c  rng.c
c/tests/: size_check.c
polctrl/: .gitignore  FINAL_REPORT.md  OPEN_ISSUES.md  PROGRESS.md  README.md  README_HAL.md  pyproject.toml
polctrl/c/: Makefile  size_check
polctrl/c/include/: bandit.h  baseline.h  fixedpoint.h  fsm.h  polctrl.h  polctrl_internal.h  rng.h  spsa.h
polctrl/c/src/: baseline.c  fixedpoint.c  fsm.c  rng.c  spsa.c
polctrl/c/tests/: size_check.c
polctrl/python/: bindings.py  constants.py  fixedpoint.py  reference_impl.py  simulator.py
polctrl/scripts/: run_all_tests.sh  scenario_runner.py
polctrl/tests/: test_bandit.py  test_baseline.py  test_fixedpoint.py  test_fsm.py  test_parity_c_vs_python.py  test_simulator.py  test_spsa_core.py
python/: constants.py
scripts/: generate_lut.py
tests/: test_baseline.py  test_fixedpoint.py
